<CMakeLists.txt updated>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 2.8)
 # ALL OF THE SPECIFIED NAMES IN THIS CMAKE ARE REQUIRED.
 # Set the project name variable to assignment3.
 # THIS IS REQUIRED
-project(hw2)
+project(assignment3)
+
+
 
 # Add your CMAKE_C_FLAGS AND CMAKE_CXX_FLAGS here
 # Make SURE to use -std=c11 and -std=c++11 where relevant.
@@ -14,19 +16,19 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wextra -Wshadow -Werror")
 
 # Add our include directory to CMake's search paths.
 # THIS IS REQUIRED
-
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
 # Create library from dyn_array so we can use it later.
-
+add_library(dyn_array src/dyn_array.c)
 
 # Compile the analysis executable.
-
+add_executable(analysis_test src/analysis.c)
 
 # link the dyn_array library we compiled against our analysis executable.
-
+target_link_libraries(analysis_test dyn_array)
 
 # Compile the the tester executable.
-add_executable(${PROJECT_NAME}_test ......)
+add_executable(${PROJECT_NAME}_test test/tests.cpp)
 
 target_compile_definitions(${PROJECT_NAME}_test PRIVATE)
 
